Migrate away from deprecated methods