@@ -128,8 +128,8 @@ public class FileSystemResource extends AbstractWebdavResource
 
         _files = new ArrayList<>(folder._files.size());
         _files.addAll(folder._files.stream()
-                .map(file -> new FileInfo(FileUtil.appendName(file.getFile(), name)))
-                .collect(Collectors.toList()));
+            .map(file -> new FileInfo(FileUtil.appendName(file.getFile(), name)))
+            .toList());
     }
 
     public FileSystemResource(Path path, File file, SecurityPolicy policy)
